stuck on line 211 prevent default fixed Iname added errors to html

--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,13 @@ h1 {
 
 }
 a:link {
-	
-	
-	display:inline;
+	display: inline
 	font-size:14px ;
 	font-weight:bold ;
 	text-align:center ;
 	text-decoration: underline ;
-	text-color: #20b5fa;
-	background-color: #7ba2bd ;
-	border-radius: 0px ;
-	box-shadow: inset 24px 11px 20px 25px #bee0ef;
-	margin-left: inherit ;
-	margin-bottom: auto ;
+	color: #84e3ff;
+	background-color: none ;
 	padding: none ;
 	width:33px ;
 }
